--- a/Grape/res/values/styles.xml
+++ b/Grape/res/values/styles.xml
@@ -53,5 +53,12 @@
         <item name="android:windowEnterAnimation">@anim/actionsheet_dialog_in</item>
         <item name="android:windowExitAnimation">@anim/actionsheet_dialog_out</item>
     </style>
+    
+    <style name="customProgerssDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>			<!-- Dialog的windowFrame框为无 -->
+        <item name="android:windowIsFloating">true</item>   	<!-- 是否漂浮在activity上面 -->
+        <item name="android:windowContentOverlay">@null</item>	<!-- 未知 -->
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>		<!-- 未知 -->
+    </style>
 
 </resources>
