--- a/Grape/res/layout/progressdialog.xml
+++ b/Grape/res/layout/progressdialog.xml
@@ -23,5 +23,15 @@
         android:padding="@dimen/padding_h8"
         android:gravity="center"
         />
+    <TextView
+        android:id="@+id/progressdialog_coustomer" 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/textview_bg"
+        android:text="progressdialog_coustomer"
+        android:layout_margin="@dimen/margin_h10"
+        android:padding="@dimen/padding_h8"
+        android:gravity="center"
+        />
 
 </LinearLayout>
