--- a/Grape/res/values/styles.xml
+++ b/Grape/res/values/styles.xml
@@ -54,11 +54,17 @@
         <item name="android:windowExitAnimation">@anim/actionsheet_dialog_out</item>
     </style>
     
-    <style name="customProgerssDialog" parent="@android:style/Theme.Dialog">
+    <!-- 自定义 progressDialog -->
+    <style name="CustomDialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>			<!-- Dialog的windowFrame框为无 -->
         <item name="android:windowIsFloating">true</item>   	<!-- 是否漂浮在activity上面 -->
         <item name="android:windowContentOverlay">@null</item>	<!-- 未知 -->
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>		<!-- 未知 -->
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
     </style>
-
+    <style name="CustomProgressDialog" parent="CustomDialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+    
 </resources>
